--- a/Makefile.Debug
+++ b/Makefile.Debug
@@ -870,6 +870,15 @@ debug/mainwindow.o: mainwindow.cpp mainwindow.h \
 		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qlineedit.h \
 		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextcursor.h \
 		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextformat.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QPlainTextEdit \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qplaintextedit.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtextedit.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextdocument.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qabstracttextdocumentlayout.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextlayout.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qglyphrun.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qrawfont.h \
+		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qfontdatabase.h \
 		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QPushButton \
 		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qpushbutton.h \
 		../../Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qabstractbutton.h \
