--- a/Makefile.Debug
+++ b/Makefile.Debug
@@ -225,6 +225,7 @@ debug/moc_email.cpp: C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QDialog \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/qfiledevice.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qvector2d.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtouchdevice.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QObject \
 		email.h \
 		debug/moc_predefs.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/bin/moc.exe
@@ -610,6 +611,7 @@ debug/moc_smtp.cpp: C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtNetwork/QAbstractSo
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qvector2d.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtouchdevice.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QByteArray \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QObject \
 		smtp.h \
 		debug/moc_predefs.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/bin/moc.exe
@@ -1004,6 +1006,7 @@ debug/email.o: email.cpp email.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/qfiledevice.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qvector2d.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtouchdevice.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QObject \
 		ui_email.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QVariant \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QAction \
@@ -1652,7 +1655,214 @@ debug/mainwindow.o: mainwindow.cpp mainwindow.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qmessagebox.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdialog.h \
 		email.h \
-		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QDialog
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QDialog \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QTextStream \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QTextDocument \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextdocument.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/QPrintDialog \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/qprintdialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/qtprintsupportglobal.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/qtprintsupport-config.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/qabstractprintdialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/QPrinter \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtPrintSupport/qprinter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpagedpaintdevice.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpagelayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpagesize.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QtWidgets \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QtWidgetsDepends \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QtGui \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QtGuiDepends \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qabstracttextdocumentlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qglyphrun.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qrawfont.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qfontdatabase.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qaccessible.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qaccessiblebridge.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qaccessibleobject.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qaccessibleplugin.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qbackingstore.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qwindow.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QEvent \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QMargins \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QRect \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qsurface.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qsurfaceformat.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qbitmap.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qclipboard.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qdesktopservices.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qdrag.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qgenericmatrix.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qgenericplugin.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qgenericpluginfactory.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qiconengine.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qiconengineplugin.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qimageiohandler.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qimagereader.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qimagewriter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qmatrix4x4.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qvector3d.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qvector4d.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qquaternion.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qmovie.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qoffscreensurface.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopengl.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/qt_windows.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtANGLE/GLES3/gl3.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtANGLE/GLES3/gl3platform.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtANGLE/KHR/khrplatform.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtANGLE/GLES2/gl2.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtANGLE/GLES2/gl2platform.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopengles2ext.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglext.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglbuffer.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglcontext.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QSurfaceFormat \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglversionfunctions.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopengldebug.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglextrafunctions.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglfunctions.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglframebufferobject.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglpaintdevice.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglpixeltransferoptions.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QSharedDataPointer \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglshaderprogram.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopengltexture.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopengltextureblitter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QMatrix3x3 \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QMatrix4x4 \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopengltimerquery.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglvertexarrayobject.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qopenglwindow.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QPaintDeviceWindow \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpaintdevicewindow.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QWindow \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QPaintDevice \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QOpenGLContext \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QImage \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpaintengine.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpainter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpdfwriter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpicture.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpictureformatplugin.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qpixmapcache.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qrasterwindow.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qscreen.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QList \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QSize \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QSizeF \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QTransform \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qsessionmanager.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qstandarditemmodel.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qstatictext.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qstylehints.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qsyntaxhighlighter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextobject.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextdocumentfragment.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextdocumentwriter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtextlist.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtexttable.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtguiversion.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qaccessiblewidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qboxlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qlayoutitem.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgridlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcalendarwidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcheckbox.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcolordialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcolormap.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcolumnview.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcommandlinkbutton.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcommonstyle.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qcompleter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdatawidgetmapper.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdatetimeedit.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdial.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdialogbuttonbox.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdirmodel.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qfileiconprovider.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdockwidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qdrawutil.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qerrormessage.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qfiledialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qfilesystemmodel.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qfocusframe.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qfontcombobox.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qfontdialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qformlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QLayout \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgesture.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgesturerecognizer.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsanchorlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsitem.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicslayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicslayoutitem.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicseffect.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsgridlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsitemanimation.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicslinearlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsproxywidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicswidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsscene.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicssceneevent.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicstransform.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/QVector3D \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgraphicsview.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qscrollarea.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qgroupbox.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qinputdialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qitemeditorfactory.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qkeyeventtransition.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qkeysequenceedit.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qlcdnumber.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qlistwidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qmdiarea.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qmdisubwindow.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qmouseeventtransition.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qopenglwidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qplaintextedit.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtextedit.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qprogressbar.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qprogressdialog.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qproxystyle.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QCommonStyle \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qradiobutton.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qscrollbar.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qscroller.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QPointF \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QScrollerProperties \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qscrollerproperties.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QMetaType \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qshortcut.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qsizegrip.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qspinbox.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qsplashscreen.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qsplitter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qstackedlayout.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qstackedwidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qstyleditemdelegate.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qstylefactory.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qstylepainter.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qstyleplugin.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qsystemtrayicon.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtablewidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtextbrowser.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtoolbox.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtoolbutton.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtooltip.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtreeview.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtreewidget.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtreewidgetitemiterator.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qundogroup.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qundostack.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qundoview.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qwhatsthis.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qwidgetaction.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qwizard.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/qtwidgetsversion.h \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtWidgets/QFileDialog
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\mainwindow.o mainwindow.cpp
 
 debug/smtp.o: smtp.cpp smtp.h \
@@ -1774,7 +1984,8 @@ debug/smtp.o: smtp.cpp smtp.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/qfiledevice.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qvector2d.h \
 		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtGui/qtouchdevice.h \
-		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QByteArray
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QByteArray \
+		C:/Qt/Qt5.9.9/5.9.9/mingw53_32/include/QtCore/QObject
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\smtp.o smtp.cpp
 
 debug/moc_email.o: debug/moc_email.cpp 
